// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> component should match the snapshot by displaying book variant 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #454545;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
}

.emotion-6 {
  min-height: 50px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: transparent;
  border-bottom: 2px solid #00677F;
  color: #00677F;
  padding: 12px 32px;
  cursor: default;
  white-space: nowrap;
}

.emotion-8 {
  min-height: 50px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: transparent;
  border-bottom: 1px solid #DEDEDE;
  color: #454545;
  padding: 12px 32px;
  cursor: pointer;
  white-space: nowrap;
}

.emotion-8:hover {
  color: #003041;
}

.emotion-12 {
  min-height: 50px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background-color: transparent;
  border-bottom: 1px solid #DEDEDE;
  color: #C1C1C1;
  padding: 12px 32px;
  cursor: not-allowed;
  white-space: nowrap;
  false opacity: 0.4;
}

.emotion-12:active {
  pointer-events: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
    style="flex-direction: row;"
  >
    <i
      class="emotion-2 emotion-3"
      color="#454545"
      data-testid="left-arrow"
      style="visibility: hidden;"
    >
      keyboard_arrow_left
    </i>
    <div
      class="emotion-4 emotion-5"
      data-testid="tabs"
      role="tablist"
    >
      <button
        class="emotion-6 emotion-7"
        data-testid="tab-item-first"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        class="emotion-8 emotion-7"
        data-testid="tab-item-second"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        class="emotion-8 emotion-7"
        data-testid="tab-item-third"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        class="emotion-12 emotion-7"
        data-testid="tab-item-fourth"
        disabled=""
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
    </div>
    <i
      class="emotion-2 emotion-3"
      color="#454545"
      data-testid="right-arrow"
      style="visibility: hidden;"
    >
      keyboard_arrow_right
    </i>
  </div>
</div>
`;

exports[`<Tabs /> component should match the snapshot by displaying boxed variant 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: #454545;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
}

.emotion-6 {
  min-height: 50px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 700;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background: #FFFFFF;
  color: #00677F;
  padding: 12px 32px;
  cursor: default;
  white-space: nowrap;
}

.emotion-8 {
  min-height: 50px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background: transparent;
  color: #454545;
  padding: 12px 32px;
  cursor: pointer;
  white-space: nowrap;
}

.emotion-8:hover {
  background: #FFFFFF;
}

.emotion-12 {
  min-height: 50px;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  background: transparent;
  color: #C1C1C1;
  padding: 12px 32px;
  cursor: not-allowed;
  white-space: nowrap;
  false opacity: 0.4;
}

.emotion-12:active {
  pointer-events: none;
}

<div>
  <div
    class="emotion-0 emotion-1"
    style="flex-direction: row;"
  >
    <i
      class="emotion-2 emotion-3"
      color="#454545"
      data-testid="left-arrow"
      style="visibility: hidden;"
    >
      keyboard_arrow_left
    </i>
    <div
      class="emotion-4 emotion-5"
      data-testid="tabs"
      role="tablist"
    >
      <button
        class="emotion-6 emotion-7"
        data-testid="tab-item-first"
        role="tab"
        tabindex="0"
      >
        Tab 1
      </button>
      <button
        class="emotion-8 emotion-7"
        data-testid="tab-item-second"
        role="tab"
        tabindex="-1"
      >
        Tab 2
      </button>
      <button
        class="emotion-8 emotion-7"
        data-testid="tab-item-third"
        role="tab"
        tabindex="-1"
      >
        Tab 3
      </button>
      <button
        class="emotion-12 emotion-7"
        data-testid="tab-item-fourth"
        disabled=""
        role="tab"
        tabindex="-1"
      >
        Tab 4
      </button>
    </div>
    <i
      class="emotion-2 emotion-3"
      color="#454545"
      data-testid="right-arrow"
      style="visibility: hidden;"
    >
      keyboard_arrow_right
    </i>
  </div>
</div>
`;
